--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.15.1"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.2.0"
   }
 }
